c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/struct_decl_double_semicolon.c
struct s {
    int a;
    ;  // extra semicolon that doesn't follow declaration is a syntax error
};